--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ text-align: center;
 	line-height: 35px;
 	color: #ffffff;
 	margin:0 4px;
-	border-radius: 50%;
+	border-radius: 7px;
 	text-decoration: none;
 	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease;
